# news-digest

./: .project_rule.md  AGENTS.md  README.md  README_CN.md  SKILL.md  _meta.json  pyproject.toml
.trae/documents/: investigate-topic-merge-issue.md
.trae/rules/: project_rule.md
config/: schema.json
config/defaults/: api-sources.json  api.json  runtime.json  sources.json  topic-rules.json  topics.json  twitter.json
references/: automation-template.md  commands.md  digest-prompt.md  execution-guide.md  hotspot-prompt.md
references/templates/: discord.md  email.md  pdf.md
scripts/: config_loader.py  fetch-api.py  fetch-crawler.py  fetch-github-trending.py  fetch-github.py  fetch-google.py  fetch-reddit.py  fetch-rss.py  fetch-toutiao.py  fetch-twitter.py  fetch-v2ex.py  fetch-weibo.py  fetch-zhihu.py  fetch_timing.py  merge-hotspots.py  merge-sources.py  merge-summarize.py  run-pipeline.py  source-health.py  step_contract.py  test-news-digest.sh  test-news-hotspots.sh  test-pipeline.sh  topic_utils.py  validate-config.py
tests/: check-sources.py  test_check_sources.py  test_config.py  test_fetch_api.py  test_fetch_github.py  test_fetch_github_trending.py  test_fetch_google.py  test_fetch_reddit.py  test_fetch_rss.py  test_fetch_toutiao.py  test_fetch_twitter.py  test_fetch_v2ex.py  test_fetch_weibo.py  test_fetch_zhihu.py  test_hotspots.py  test_merge.py  test_run_pipeline.py  test_source_health.py  test_step_contract.py  test_summarize.py  test_topic_utils.py
tests/fixtures/: github.json  google.json  merged.json  reddit.json  rss.json  twitter.json  web.json
