[project]
name = "tech-news-digest"
version = "3.16.0"
description = "Automated tech news digest system with unified data sources, quality scoring, and multi-format output"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "feedparser>=6.0.0",
    "jsonschema>=4.0.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
pdf = ["weasyprint>=60.0"]

[tool.uv]
dev-dependencies = []
